Regression: AX: <table><caption> no longer exposed as AXTitle. https://bugs.webkit.org/show_bug.cgi?id=121977

Patch by Samuel White <samuel_white@apple.com> on 2013-10-03
Reviewed by Darin Adler.

Source/WebCore:

Some cleanup of accessibilityText. Notably, subclasses were unnecessarily redeclaring this method as both private and
protected. Added OVERRIDE keyword to these subclasses as needed. Moved titleElementText to virtual so we can do subclass
overrides in cases like this bug. That is, AccessibilityTable can leverage the existing machinery for alternativeText,
visibleText, and helpText, but we do some custom work ONLY in titleElementText.

Test: accessibility/table-title.html

* accessibility/AccessibilityImageMapLink.h:
* accessibility/AccessibilityMediaControls.h:
* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::titleElementText):
* accessibility/AccessibilityNodeObject.h:
* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::titleElementText):
* accessibility/AccessibilityTable.h:

LayoutTests:

Added test to verify that table elements correctly derive their AXTitle from their associated caption element.

* accessibility/table-title-expected.txt: Added.
* accessibility/table-title.html: Added.

Canonical link: https://commits.webkit.org/140347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156867 268f45cc-cd09-0410-ab3c-d52691b4dbfc